--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -155,7 +155,7 @@ TO MAINTAIN CONSISTANCY -->
                     </div>
 					<i></i>
                 	<div class="service-list-col2">
-						<h4>Making A World of Your Own Creation......</h4>
+						<h4>The God who creates Gods.....</h4>
 						<h4>Article By: Cameron DeGeorge </h4>
                     </div>
                 </div>
@@ -163,10 +163,17 @@ TO MAINTAIN CONSISTANCY -->
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <p>It is very simple to make a pantheon! </p>
 						<p>Your Pantheon is Your Own. Your own Goddesses, Gods,  </p>
-						<p>Titans, Demi-Gods and So on. Click to find out more!</p>
+						<p>Titans, Demi-Gods and So on. Here is what you will learn:</p>
+						
+						<p>1. How to Create a God, Goddess, and Titan</p>
+						<p>2. How to Name a God, Goddess, and Titan</p>
+						<p>3. Size of a Pantheon</p>
+						<p>Plus so much more! Click here or on the image </p>
+						<p>to learn more!</p>
+
 						
                     </div>
                 </div>
@@ -202,9 +209,13 @@ TO MAINTAIN CONSISTANCY -->
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="service-list-col2">
-                        <p>Your Multiverse. How is it shaped? I personally like a more cube. So at the center of the Multiverse where maybe the Gods are or somewhere even Gods cannot go for dramatic effect...Click here to find out more!</p>
-                    </div>
+                	<div class="featured-box-col2">
+                        <p>Your Multiverse. How is it shaped? I personally like a more cube. So at the center of the Multiverse where maybe the Gods are or somewhere even Gods cannot go for dramatic effect... That is just a snippet of what you can will see in this article. Here what what you will learn: </p>
+						<p>1. How to Create a Multiverse</p>
+						<p>2. How to Shape your Multiverse</p>
+						<p>3. Create Factions of yoyr Multiverse</p>
+						<p>Plus so much more! Click here or on the image to learn more!</p>
+					</div>
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
@@ -243,9 +254,15 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="service-list-col2">
-                        <p>Start with a Kingdom. You do not need to plan a whole world from the start. You can start with One Kingdom. Think about what the kingdom is known for? What ideals do they hold? How does the government function?.... Click here to find out more! </p>
-                    </div>
+                	<div class="featured-box-col2">
+                        <p>Start with a Kingdom. You do not need to plan a whole world from the start. You can start with One Kingdom. Think about what the kingdom is known for? What ideals do they hold? This is just a snippet of what you will read in this article. Here is what you will learn: </p>
+                    	<p>1. How to Create a Kingdom from Scratch</p>
+						<p>2. How to Name a Kingdom</p>
+						<p>3. How to Create Towns/Cities</p>
+						<p>4. How to Create a Government</p>
+						<p>Plus so much more! Click here or on the image </p>
+						<p>to learn more!</p>
+					</div>
                 </div>
             </div>
 
