finishing character page
finished carousel and added navigation images

--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -129,37 +129,37 @@
 		</div>
 		<div class="portfolioContainer wow fadeInUp delay-04s">
 					<div class="Portfolio-box RaceClass">
-						<a href="#RaceClass"><img src="img/icon2.ico" alt=""></a>
+						<a href="#RaceClass"><img src="img/races icon.jpg" alt=""></a>
 						<h3>Race | Class</h3>
-						<p>General Instructions on Race | Class</p>
+						<p>Examples for choosing Race | Class</p>
 					</div>
 					<div class="Portfolio-box AbilityScoresandSuch">
-						<a href="#AbilityScoresandSuch"><img src="img/icon1.ico" alt=""></a>
+						<a href="#AbilityScoresandSuch"><img src="img/ability scores icon.jpg" alt=""></a>
 						<h3>Ability | Scores & Such</h3>
 						<p>General Instructions on Abilities | Scores & Such</p>
 					</div>
 					<div class="Portfolio-box BackgroundandDetails">
-						<a href="#BackgroundandDetails"><img src="img/icon7.ico" alt=""></a>
+						<a href="#BackgroundandDetails"><img src="img/character background icon.jpg" alt=""></a>
 						<h3>Background & Details</h3>
-						<p>General Instructions on Background & Details</p>
+						<p>General Instructions on Background & Character Details</p>
 					</div>
 					<div class="Portfolio-box Equipment">
-						<a href="#Equipment"><img src="img/iconic1.ico" alt=""></a>
+						<a href="#Equipment"><img src="img/armory icon.jpg" alt=""></a>
 						<h3>Equipment</h3>
-						<p>General Instructions on Equipment</p>
+						<p>Instructions on choosing Equipment</p>
 					</div>
 					<div class="Portfolio-box Leveling">
-						<a href="#Leveling"><img src="img/iconic1.ico" alt=""></a>
+						<a href="#Leveling"><img src="img/powering up icon.jpg" alt=""></a>
 						<h3>Leveling</h3>
 						<p>General Instructions on Leveling</p>
 					</div>
 					<div class="Portfolio-box CharacterSheets">
-						<a href="#CharacterSheets"><img src="img/iconic1.ico" alt=""></a>
+						<a href="#CharacterSheets"><img src="img/character sheets icon.jpg" alt=""></a>
 						<h3>Character Sheets</h3>
-						<p>General Character Sheets</p>
+						<p>Information on Character Sheets</p>
 					</div>
 					<div class="Portfolio-box carousel">
-						<a href="#carousel"><img src="img/iconic1.ico" alt=""></a>
+						<a href="#carousel"><img src="img/barb sheet.jpg" alt=""></a>
 						<h3>Possible Characters</h3>
 						<p>Carousel of possible characters</p>
 					</div>
@@ -780,22 +780,22 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
-						<!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
+                        <!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
                             <!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
-                            <img src=".\img\Creator.jpg" alt="Character 1">
+                            <img src=".\img\barb sheet.jpg" alt="Character 1">
                             <div class="carousel-caption">
                                 <h4 text="bold">Character 1</h4>
-                                <p>Human Fighter</p>
+                                <p>Half Orc Barbarian</p>
                             </div>
                         </div>
 
                         <div class="item">
-                            <img src=".\img\Creator.jpg" alt="Character 2">
+                            <img src=".\img\elf ranger.jpg" alt="Character 2">
                             <div class="carousel-caption">
                                 <h4>Character 2</h4>
                                 <p>Elf Ranger</p>
@@ -803,10 +803,10 @@
                         </div>
 
                         <div class="item">
-                            <img src=".\img\Creator.jpg" alt="Character 3">
+                            <img src=".\img\human sorcerer.jpg" alt="Character 3">
                             <div class="carousel-caption">
                                 <h4>Character 3</h4>
-                                <p>Gnome Wizard</p>
+                                <p>Human Sorcerer</p>
                             </div>
                         </div>
                     </div>
@@ -821,6 +821,8 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
+                <br>
+                <p>To learn more about the characters we prepared for you, click here.</p>
             </center>
     </section>
 
