--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <!-- =======================================================================
 ============================================================================
@@ -184,7 +184,7 @@
 </section><!--main-section-end-->
 
 <!-- ============================================================================================================================== -->
-<!-- ====================================================== BILL - MONSTER SECTION ======================================================== -->
+<!-- ====================================================== BILL SECTION ========================================================== -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section alabaster" id="Monster"><!--main-section alabaster-start-->
@@ -203,8 +203,12 @@
                     	<i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>Contribution 1</h3>
-                        <p>Contribution 1 Description</p>
+                        <h3>I'm Bill</h3>
+                        <p>I'm a returning student to Jackson College studying towards the software engineering degree.
+                        I've played Dungeons and Dragons off and on for the last five years and thought it would be
+                        fun to try and help introduce people to the world of D&D. I like to spend my time playing
+                        video games or Magic the Gathering with friends. After JC I plan to continue pursuing this 
+                        degree and see where it takes me.</p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -212,17 +216,11 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>Contribution 2</h3>
-                        <p>Contribution 2 Description</p>
-                    </div>    
-                </div>
-                <div class="featured-box">
-                	<div class="featured-box-col1 wow fadeInRight delay-06s">
-                    <i></i>
-                    </div>	
-                	<div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>Contribution 3</h3>
-                        <p>Contribution 3 Description</p>
+                        <h3>Content devlopement</h3>
+                        <p>My main contributions to the project were the developement of the character
+                        creation pages as well as collaborating with Cameron for the developement of the
+                        encounter building page.I gathered content for the character page and contributed 
+                        my thoughts as well as linking the tertiary pages and making tables for the encounters.</p>
                     </div>    
                 </div>
                 <a class="Learn-More" href="#">Learn More</a>
