--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -145,39 +145,45 @@
 	<div class="container">
     	<h2>Cayce Whitcomb</h2>
     	<h6>Project Manager</h6>
+		<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+            	<a href="Group_C_D&D charactercreation.html"><img src="img/IMG_3404.jpg" alt="Character Icon"></a>
+            </figure>
         <div class="row">
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
                 	<div class="service-list-col1">
                     </div>
 					<i></i>
-                	<div class="featured-box-col2">
-                        <h3>Contribution 1</h3>
-                        <p>Contribution 1 Description</p>
+                	<div class="service-list-col2">
+                        <h3>I'm Cayce!</h3>
+						<p><li>Not really familiar with the game dungeons and dragons but I will continue to lead our group to victory!</li></p>
+                        <p>Project Supervision</p>
+						<p><li>My goal is to ensure that everything works effeciently throughout the whole project.</li></p> As project manager, it's my job to assist other members in areas that may challenge them rather that being syntax error while coding or just a simply misplaced comma within the paperwork it is up to me to ensure that the performance of the project as a whole is seccessfully completed without error.  </li></p>
                     </div>
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="featured-box-col2">
-                        <h3>Contribution 2</h3>
-                        <p>Contribution 2 Description</p>
+                	<div class="service-list-col2">
+                        <h3>CSS correction</h3>
+                        <p><li>Due to our project being coded in html I take responsibility for making the corrections within the
+						"css" to ensure that everyone else's portion of the code is in the correct format. </li></p>
                     </div>
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
                     <i></i>
                     </div>
-                	<div class="featured-box-col2">
-                        <h3>Contribution 3</h3>
-                        <p>Contribution 3 Description</p>
+                	<div class="service-list-col2">
+                        <h3>Paperwork Revision/Management</h3>
+                        <p><li>Together floyd and I both work side by side on various documents required for the project. Whenever the group encounters a problem it's up to me to provide them with guidance and the necessary resources they need to make this project successful. </li></p>
                     </div>
                 </div>
             </div>
-            <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+            <!--<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
             	<a href="Group_C_D&D charactercreation.html"><img src="img/iconic1.ico" alt="Character Icon"></a>
-            </figure>
+            </figure>-->
         
         </div>
 	</div>
@@ -194,7 +200,7 @@
 				<h6>Content Developer</h6>
             	
 			<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<a href=""><img src="img/icon2.ico" alt="Monster Icon"></a>				<!-- FILL IN 'HREF' LINK -->
+            	<a href=""><img src="img/profile pic.jpg" alt="Monster Icon"></a>				<!-- FILL IN 'HREF' LINK -->
             </figure>
 
         	<div class="col-lg-7 col-sm-8 featured-work">
@@ -203,8 +209,12 @@
                     	<i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>Contribution 1</h3>
-                        <p>Contribution 1 Description</p>
+                        <h3>I'm Bill</h3>
+                        <p><li>I'm a returning student to Jackson College studying towards the software engineering degree.
+                        I've played Dungeons and Dragons off and on for the last five years and thought it would be
+                        fun to try and help introduce people to the world of D&D. I like to spend my time playing
+                        video games or Magic the Gathering with friends. After JC I plan to continue pursuing this 
+                        degree and see where it takes me.</li></p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -212,17 +222,11 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>Contribution 2</h3>
-                        <p>Contribution 2 Description</p>
-                    </div>    
-                </div>
-                <div class="featured-box">
-                	<div class="featured-box-col1 wow fadeInRight delay-06s">
-                    <i></i>
-                    </div>	
-                	<div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>Contribution 3</h3>
-                        <p>Contribution 3 Description</p>
+                        <h3>Content devlopement</h3>
+                        <p><li>My main contributions to the project were the developement of the character
+                        creation pages as well as collaborating with Cameron for the developement of the
+                        encounter building page.I gathered content for the character page and contributed 
+                        my thoughts as well as linking the tertiary pages and making tables for the encounters.</li></p>
                     </div>    
                 </div>
                 <a class="Learn-More" href="#">Learn More</a>
@@ -246,32 +250,28 @@
                 	<div class="service-list-col1">
                     </div>
 					<i></i>
-                	<div class="featured-box-col2">
+					<div class="featured-box-col2">
                         <h3>I'm Cameron</h3>
-                        <p>I've been playing Dungeons and Dragons for about 5 years. I've been a Dungeons and Dragons master for the same 
+                        <p><li>I've been playing Dungeons and Dragons for about 5 years. I've been a Dungeons and Dragons master for the same 
 						amount of time, creating my own worlds and stories.	I wanted to show/teach other players how to create a d&d game 
 						and show others how easy it can be to create your own world. My goal is to show as many people as I possibly can 
-						how to create their own story in the world of Dungeons and Dragons.</p><br>
+						how to create their own story in the world of Dungeons and Dragons.</li></p><br>
                     </div>
+					<!--Actually everythings fine-->
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="featured-box-col2">
-                        <h3>Contribution 2</h3>
-                        <p>Contribution 2 Description</p>
+                	<div class="service-list-col2">
+                        <h3>World building/Coding</h3>
+                        <p><li>My primary contributions to the project include gathering material to construct the world building page. Also, I've collaborated with Bill and together we tackled the encounter building page.</li></p>
                     </div>
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
                     <i></i>
                     </div>
-                	<div class="featured-box-col2">
-                        <h3>Contribution 3</h3>
-                        <p>Contribution 3 Description</p>
-                    </div>
-                </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
             	<a href="Group_C_D&D - Pantheon - v2.html"><img src="img/creator.jpg" alt="Creator Image"></a>
@@ -291,7 +291,7 @@
     	<h6>Documentation Resource / Content Developer</h6>
     	<div class="row">
 			<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<a href=""><img src="img/icon6.ico" alt="Creator Image"></a>		<!-- FILL IN 'HREF' LINK -->
+            	<a href=""><img src="img/41A43C97-F9BD-498F-B864-63918C2FD85E.jpg" alt="Creator Image"></a>	<!-- FILL IN 'HREF' LINK <a href=""><img src="img/icon6.ico" alt="Creator Image"></a> -->
             </figure>
          	<div class="col-lg-7 col-sm-8 featured-work">
             	<div class="featured-box">
@@ -300,35 +300,43 @@
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
                         <h3>I'm Floyd!!</h3>
-						<p>
+						<p><li>
 						  My hobbies include basketball, video gaming, and reading.
                         I'm a student at Jackson College.
                         I'm currently studying Computer Programming Specialist.
                        After Jackson, I plan to continue my education at Siena Heights University.
-					   </p><br>
+					   </p>
+					   <h3></h3>
+                        <h3>Documentation/paperwork:</h3>
+						<p></p>
+						<p><li>One of my contributions for this project is handling/editing a good amount of the paperwork.
+								Our project manager give's me specific items or specific resources to ensure that I have what is need to complete our reports.</li></p>
                     </div>    
-					</div>
-					<div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-04s">
-						<i></i>
-						</div>	
-						<div class="featured-box-col2 wow fadeInRight delay-04s">
-							<h3>Documentation & Paperwork</h3>
-							<p>One of my contributions for this project is handling/editing a good amount of the paperwork.
-									Our project manager give's me specific items or specific resources to ensure that I have what is need to complete our reports.</p><br>
-						</div>    
-				   </div>
-				   <div class="featured-box">
-						<div class="featured-box-col1 wow fadeInRight delay-04s">
-						<i></i>
-						</div>	
-						<div class="featured-box-col2 wow fadeInRight delay-04s">
-							<h3>About Page Creation</h3>
-							<p>Another of my contributions involves creating the about page for our group.
-							Each group member has their own section with information about them as well as their contributions to the project.
-							My job is to gather each individuals information and insert the material into specific group members area.</li></p>
-						</div>    
-				   </div>
+                </div>
+                <div class="featured-box">
+                	<div class="featured-box-col1 wow fadeInRight delay-04s">
+                    <i></i>
+                    </div>	
+                	<div class="featured-box-col2 wow fadeInRight delay-04s">
+                        <h3>About page creation:</h3>
+                        <p><li>Another of my contributions involves creating the about page for our group.
+						Each group member has their own section with information about them as well as their contributions to the project.
+						My job is to gather each individuals information and insert the material into specific group members area.</li></p>
+                    </div>    
+               </div>
+                <!-- <div class="featured-box">
+                	<div class="featured-box-col1 wow fadeInRight delay-06s">
+                    <i></i>
+                    </div>	
+                	<div class="featured-box-col2 wow fadeInRight delay-06s">
+                        <h3>Contribution 3</h3>
+                        <p>Contribution 3 Description</p>
+                    </div>    
+                </div>
+                <a class="Learn-More" href="#">Learn More</a>
+            </div>
+        </div>  
+	</div> -->
 </section><!--main-section alabaster-end-->
 
 
