encounter buliding implementation
implemented the encounter building page

--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -17,6 +17,7 @@
     03/27/2020    William Cook			Initial implementation
     04/05/2020    William Cook          Filled in content
     4/11/2020     William Cook          Added Equipment
+    4/17/2020     William Cook          Finishing touches to main page
 ============================================================================
 ======================================================================== -->
 
