--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -72,8 +72,6 @@
 <!-- ============================================================================================================================== -->
 <!-- ==================================================== MAIN NAVIGATION SECTION ================================================= -->
 <!-- ============================================================================================================================== -->
-
-
 <!-- -->
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
@@ -81,16 +79,14 @@
 			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
-			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
-			<li><a href="#Monster">Monster Building</a></li>
-            <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
+			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
+			<li><a href="Group_C_D&D - encounter building.html">Encounter Building</a></li>
+            <li><a href="Group_C_D&D - WB.html">World Building</a></li>
 			<li><a href="Group_C_D&D - About.html">About Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
-
-
 <!-- ============================================================================================================================== -->
 <!-- ========================================================= MENU SECTION ======================================================= -->
 <!-- ============================================================================================================================== -->
@@ -213,7 +209,7 @@ TO MAINTAIN CONSISTANCY -->
                         <p>Your Multiverse. How is it shaped? I personally like a more cube. So at the center of the Multiverse where maybe the Gods are or somewhere even Gods cannot go for dramatic effect... That is just a snippet of what you can will see in this article. Here what what you will learn: </p>
 						<p>1. How to Create a Multiverse</p>
 						<p>2. How to Shape your Multiverse</p>
-						<p>3. Create Factions of yoyr Multiverse</p>
+						<p>3. Create Factions of your Multiverse</p>
 						<p>Plus so much more! Click here or on the image to learn more!</p>
 					</div>
                 </div>
@@ -283,8 +279,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#header"><img src="img/icon2.ico" alt=""></a></div>
-        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span>
+        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span><br>
         <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
@@ -292,7 +287,9 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
             -->
-            Website design by<a href="WEBSITE DESIGNERS COMPANY WEB ADDRESS"> COMPANY NAME</a>
+            Website design by<a href="Group_C_D&D - About.html"> CIS-273 - Group C</a><br><br>
+			
+			SPECIAL NOTE: THIS WEBSITE IS FOR A SCHOOL PROJECT AND WILL NOT REMAIN ACTIVE AFTER 05/15/2020
         </div>
     </div>
 </footer>
