--- a/Group_C_D&D - encounter building.html
+++ b/Group_C_D&D - encounter building.html
@@ -59,9 +59,9 @@
             <figure class="logo animated fadeInDown delay-07s">
                 <a href="#"><img src="" alt=""></a>
             </figure>
-            <h1 class="animated fadeInDown delay-07s">Character's</h1>
+            <h1 class="animated fadeInDown delay-07s">Encounters</h1>
             <ul class="we-create animated fadeInUp delay-1s">
-                <li>Our Thoughts on Character Creation</li>
+                <li>Our Thoughts on Encounter Creation</li>
             </ul>
             <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Lets Go!</a>
         </div>
@@ -70,23 +70,20 @@
     <!-- ==================================================== MAIN NAVIGATION SECTION ================================================= -->
     <!-- ============================================================================================================================== -->
     <!-- -->
-    <nav class="main-nav-outer" id="test">
-        <!--main-nav-start-->
-        <div class="container">
-            <ul class="main-nav">
-                <a class="small-logo">
-                    <a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
-                    <li><a href="#Menu">Menu</a></li>
-                    <li><a href="Group_C_D&D.html">Home</a></li>
-                    <li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
-                    <li><a href="#Monster">Monster Building</a></li>
-                    <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
-                    <li><a href="Group_C_D&D - About.html">About Us</a></li>
-            </ul>
-            <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
-        </div>
-    </nav><!--main-nav-end-->
-    <!-- ============================================================================================================================== -->
+<nav class="main-nav-outer" id="test"><!--main-nav-start-->
+	<div class="container">
+        <ul class="main-nav">
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+			<li><a href="#Menu">Menu</a></li>
+            <li><a href="Group_C_D&D.html">Home</a></li>
+			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
+			<li><a href="Group_C_D&D - encounter building.html">Encounter Building</a></li>
+            <li><a href="Group_C_D&D - WB.html">World Building</a></li>
+			<li><a href="Group_C_D&D - About.html">About Us</a></li>
+        </ul>
+        <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
+    </div>
+</nav><!--main-nav-end-->    <!-- ============================================================================================================================== -->
     <!-- ========================================================= Intro Section ====================================================== -->
     <!-- ============================================================================================================================== -->
     <section class="main-section paddind" id="Intro">
@@ -338,21 +335,22 @@
         <!-- ====================================================== FOOTER SECTION ======================================================== -->
         <!-- ============================================================================================================================== -->
 
-        <footer class="footer">
-            <div class="container">
-                <div class="footer-logo"><a href="#header"><img src="img/icon2.ico" alt=""></a></div>
-                <span class="copyright">&copy; Group C D&D - All Rights Reserved</span>
-                <div class="credits">
-                    <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-                -->
-                    Website design by<a href="WEBSITE DESIGNERS COMPANY WEB ADDRESS"> COMPANY NAME</a>
-                </div>
-            </div>
-        </footer>
+<footer class="footer">
+    <div class="container">
+        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span><br>
+        <div class="credits">
+            <!-- 
+                All the links in the footer should remain intact. 
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
+            -->
+            Website design by<a href="Group_C_D&D - About.html"> CIS-273 - Group C</a><br><br>
+			
+			SPECIAL NOTE: THIS WEBSITE IS FOR A SCHOOL PROJECT AND WILL NOT REMAIN ACTIVE AFTER 05/15/2020
+        </div>
+    </div>
+</footer>
 
 
         <script type="text/javascript">
