--- a/Group_C_D&D - Pantheon.html
+++ b/Group_C_D&D - Pantheon.html
@@ -76,13 +76,13 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="#header"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
-            <li><a href="#Character">Character Creation</a></li>
-			<li><a href="#Monster">Monster/NPC Maker</a></li>
-            <li><a href="#World">World Building</a></li>
-			<li><a href="#About">About Us</a></li>
-            <li><a href="#Contact">Contact Us</a></li>
+            <li><a href="Group_C_D&D.html">Home</a></li>
+			<li><a href="Group_C_D&D - charactercreation.html">Character Building</a></li>
+			<li><a href="Group_C_D&D - encounter building.html">Encounter Building</a></li>
+            <li><a href="Group_C_D&D - WB.html">World Building</a></li>
+			<li><a href="Group_C_D&D - About.html">About Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -128,8 +128,7 @@ Naming them is simple: Take the core aspect or aspects of your God/Goddess and p
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#header"><img src="img/icon2.ico" alt=""></a></div>
-        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span>
+        <span class="copyright">&copy; Group C D&D - All Rights Reserved</span><br>
         <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
@@ -137,7 +136,9 @@ Naming them is simple: Take the core aspect or aspects of your God/Goddess and p
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
             -->
-            Website design by<a href="WEBSITE DESIGNERS COMPANY WEB ADDRESS"> COMPANY NAME</a>
+            Website design by<a href="Group_C_D&D - About.html"> CIS-273 - Group C</a><br><br>
+			
+			SPECIAL NOTE: THIS WEBSITE IS FOR A SCHOOL PROJECT AND WILL NOT REMAIN ACTIVE AFTER 05/15/2020
         </div>
     </div>
 </footer>
