--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -146,7 +146,7 @@
     	<h2>Cayce Whitcomb</h2>
     	<h6>Project Manager</h6>
 		<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<a href="Group_C_D&D charactercreation.html"><img src="img/IMG_3404.jpg" alt="Character Icon"></a>
+            	<a href="Group_C_D&D charactercreation.html"><img src="img/cayce2.png" alt="Character Icon"></a>
             </figure>
         <div class="row">
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
